# XE404500

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  crud.md  index.html  installAndCreateMysqlTable.sh  main.cc  package-lock.json  package.json  requirement.md  resetBuild.sh  vite.config.js
controllers/: Calendar.cc  Calendar.h  voice.cc  voice.h
services/: EventService.cc  EventService.h  TextProcess.cc  TextProcess.h  sendMail.cc  sendMail.h
services/scripts/: send_email.py
src/: App.css  App.jsx
src/components/: CalendarView.css  CalendarView.jsx  CommandHint.jsx  TodoList.css  TodoList.jsx  VoiceAssistant.css  VoiceAssistant.jsx
src/utils/: parseText.js
test/: CMakeLists.txt
